--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
   </div>
 </div>
 
-<div class="card text-bg-danger mb-3" style="max-width: 18rem;">
+<div class="card bg-danger text-white mb-3" style="max-width: 18rem;">
   <div class="card-header">Alert</div>
   <div class="card-body">
     <h5 class="card-title">Node Dead</h5>
@@ -30,7 +30,7 @@
   <div class="card-body">
     <h5 class="card-title">President under Pressure</h5>
     <p class="card-text">The US president is under pressure to respond to a widespread cyber-attack linked to China</p>
-    <p class="card-text"><small class="text-body-secondary">Last updated 12 mins ago</small></p>
+    <p class="card-text"><small class="text-muted">Last updated 12 mins ago</small></p>
   </div>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
